[workspace]
members = [
    "crates/sloth",
    "crates/sloth_bytecode",
    "crates/sloth_bytecode/macros",
    "crates/sloth_vm",
]

[workspace.package]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
strip = "debuginfo"
lto = "thin"
opt-level = 3

