[package]
name = "sloth"

license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
itertools = "0.10.5"
rand = "0.8.5"
thiserror = "1.0.40"

[dependencies.llvm-sys]
version = "150"
optional = true

[dependencies.inkwell]
version = "0.2.0"
features = ["llvm15-0"]
optional = true

[features]
default = ["llvm"]
llvm = ["dep:llvm-sys", "dep:inkwell"]